src/tests/closure/snapshots/monkey_interpreter__tests__closure__test_closure_case_5_environment.snap
---
source: src/tests/closure/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "identity": Function {
                    parameters: [
                        "value",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Identifier {
                                    identifier: "value",
                                },
                            },
                        ],
                    },
                    ..
                },
                "value": Integer {
                    value: 5,
                },
            },
            enclosing: None,
        },
    },
}
