src/tests/closure/snapshots/monkey_interpreter__tests__closure__test_closure_case_5_lexical_analysis.snap
---
source: src/tests/closure/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "value",
    },
    Assign,
    Integer {
        literal: 5,
    },
    SemiColon,
    Let,
    Identifier {
        literal: "identity",
    },
    Assign,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "value",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "value",
    },
    ClosingCurlyBracket,
    SemiColon,
    Identifier {
        literal: "identity",
    },
    OpeningRoundBracket,
    Identifier {
        literal: "value",
    },
    Plus,
    Integer {
        literal: 1,
    },
    ClosingRoundBracket,
    SemiColon,
]
