src/tests/closure/snapshots/monkey_interpreter__tests__closure__test_closure_case_7_syntax_analysis.snap
---
source: src/tests/closure/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "sum",
            expression: Function {
                parameters: [
                    "n",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: If {
                                condition: Infix {
                                    left_hand: Identifier {
                                        identifier: "n",
                                    },
                                    operator: Equals,
                                    right_hand: Integer {
                                        literal: 0,
                                    },
                                },
                                consequence: Block {
                                    nodes: [
                                        Expression {
                                            expression: Integer {
                                                literal: 0,
                                            },
                                        },
                                    ],
                                },
                                alternative: Some(
                                    Block {
                                        nodes: [
                                            Expression {
                                                expression: Infix {
                                                    left_hand: Identifier {
                                                        identifier: "n",
                                                    },
                                                    operator: Plus,
                                                    right_hand: Call {
                                                        function: Identifier {
                                                            identifier: "sum",
                                                        },
                                                        arguments: [
                                                            Infix {
                                                                left_hand: Identifier {
                                                                    identifier: "n",
                                                                },
                                                                operator: Minus,
                                                                right_hand: Integer {
                                                                    literal: 1,
                                                                },
                                                            },
                                                        ],
                                                    },
                                                },
                                            },
                                        ],
                                    },
                                ),
                            },
                        },
                    ],
                },
            },
        },
    },
    Expression {
        expression: Call {
            function: Identifier {
                identifier: "sum",
            },
            arguments: [
                Integer {
                    literal: 5,
                },
            ],
        },
    },
]
