src/tests/closure/snapshots/monkey_interpreter__tests__closure__test_closure_case_8_environment.snap
---
source: src/tests/closure/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "caller": Function {
                    parameters: [],
                    block: Block {
                        nodes: [
                            Statement {
                                statement: Let {
                                    identifier: "hidden",
                                    expression: Integer {
                                        literal: 5,
                                    },
                                },
                            },
                            Expression {
                                expression: Call {
                                    function: Identifier {
                                        identifier: "getHidden",
                                    },
                                    arguments: [],
                                },
                            },
                        ],
                    },
                    ..
                },
                "getHidden": Function {
                    parameters: [],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Identifier {
                                    identifier: "hidden",
                                },
                            },
                        ],
                    },
                    ..
                },
            },
            enclosing: None,
        },
    },
}
