src/tests/closure/snapshots/monkey_interpreter__tests__closure__test_closure_case_8_syntax_analysis.snap
---
source: src/tests/closure/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "getHidden",
            expression: Function {
                parameters: [],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Identifier {
                                identifier: "hidden",
                            },
                        },
                    ],
                },
            },
        },
    },
    Statement {
        statement: Let {
            identifier: "caller",
            expression: Function {
                parameters: [],
                block: Block {
                    nodes: [
                        Statement {
                            statement: Let {
                                identifier: "hidden",
                                expression: Integer {
                                    literal: 5,
                                },
                            },
                        },
                        Expression {
                            expression: Call {
                                function: Identifier {
                                    identifier: "getHidden",
                                },
                                arguments: [],
                            },
                        },
                    ],
                },
            },
        },
    },
    Expression {
        expression: Call {
            function: Identifier {
                identifier: "caller",
            },
            arguments: [],
        },
    },
]
